# beak-ta3

./: .gitignore  Dockerfile  README.md  builddocs.bash  dependencies.yml  docker-compose.yml  environment.yml  license  mkdocs.yml  notice  pyproject.toml  requirements.txt  setup.py  sync.ffs_lock
data/: please_hold_data_locally.md
docs/: index.md  models.md  mtri_packagetemplate.md  utilities.md
docs/source/: beak.math.normalKLDiv.rst  beak.math.rst  beak.math.utils.rst  beak.rst  beak.utilities.eda.rst  beak.utilities.preparation.rst  beak.utilities.rst  beak.utilities.transformation.rst  conf.py  index.rst
docs/templates/apidoc/: conf.py_t  package.rst_t  root_doc.rst_t  toc.rst_t
evaluation/01_docs/: 01_setup.md  02_models.md  03_tools.md
examples/01_data_preparation/01_base_raster/: create_base_rasters.ipynb
examples/01_data_preparation/02_spatial_alignment/: reproject_grids.ipynb  snap_raster.ipynb  unify_grids.ipynb
examples/01_data_preparation/03_convertions/: create_binary_rasters_from_categories.ipynb
examples/01_data_preparation/04_derivatives/: calculate_distance.ipynb
examples/02_labels_and_sampling/dummy_data/: 01_create_data.ipynb  02a_labels_hard_buffer.ipynb  02b_labels_random_in_categories.ipynb
examples/02_labels_and_sampling/real_data/: 01_create_label_raster_from_vector_data.ipynb  02a_create_hard_buffer_around_labels.ipynb  02b_create_random_samples_in_som_classes.ipynb
examples/cdr/: pull_from_cdr_json_evidence_layers.ipynb  pull_from_cdr_line_features_ta1.ipynb
examples/cdr/upload_model_results/: upload_cma_output-SOM_MVT.ipynb
examples/data_preparation/: calculate_distance.ipynb  conversion_create_base_rasters.ipynb  conversion_create_label_rasters.ipynb  create_base_rasters.ipynb  create_binary_rasters_from_categories.ipynb  create_continuous_raster.ipynb  create_label_rasters.ipynb  impute_grids.ipynb  reproject_grids.ipynb  snap_raster.ipynb  unify_grids.ipynb
examples/hmi_statmagic/: som_example_workflow.ipynb
examples/methods/bnn/: 01a_run_bnn_with_model_selection.py  01b_run_bnn_with_folders.py
examples/notebooks/: conversion_create_label_rasters.ipynb  raster_processing_snap_raster.ipynb  raster_processing_unify_grids.ipynb
examples/notebooks/som/: 01_create_list_of_raster_files_mag_nickel.ipynb  02_run_nextsomcore.ipynb
examples/sampling_labels/: create_hard_buffer_around_labels.ipynb  random_sample_from_som_bmu.ipynb
examples/som/: 01_som_example_call.py  01_som_primary_file.py  02_run_som_files_with_args.py  03_create_pdf_som_results_compare.py
examples/utilities/: compress_and_clean_up_som_text_files.ipynb  compress_raster_files.ipynb  convert_ipynb_to_script.py  create_args_list_for_mp.ipynb  create_code_backups.py  export_models.ipynb  save_model_input_data.ipynb  write_compressed_rasters.ipynb
experiments/dev/: 01_som_dev.ipynb
experiments/hackathon_12m_related/03_cma/: run_files.py
experiments/hackathon_9m_related/01_docs/: 02_models.md
experiments/mag_nickel_nat/data_preparation/: 04_create_training_labels.ipynb  (+3 more)
experiments/mvt_nat/: 01_data_overview.ipynb  02_datacube_raster_extraction.ipynb  03_raster_reprojection.ipynb  04_raster_scaling.ipynb  convert_projection.py  datacube_raster_extraction.ipynb  datacube_raster_reprojection.ipynb  models.py  utilities.py
install/docker/: docker-compose.yml
install/win/: environment.yml  setup.sh  setup_log.txt
laboratory/: test.ipynb
methods/som/: argsPlot.py  argsSOM.py  do_nextsom.ipynb  run_nextsomcore.ipynb  run_nextsomcore.py
setup/docker/: Dockerfile  build.sh  docker-compose.yml  run.sh  setup_build.sh
setup/unix/: environment.yml  setup.sh
setup/win/: environment.yml
src/cdr_schemas/: .gitignore  README.md  pyproject.toml
src/cdr_schemas/cdr_schemas/: area_extraction.py  common.py  document.py  events.py  feature_results.py  georeference.py  map.py  map_results.py  metadata.py  mineral.py  prospectivity_input.py  prospectivity_models.py
src/cdr_schemas/cdr_schemas/cdr_responses/: area_extractions.py  cma.py  cogs.py  features.py  legend_items.py  prospectivity.py
src/cdr_schemas/cdr_schemas/features/: line_features.py  point_features.py  polygon_features.py
src/cdr_schemas/dev/: docs.py  script.py
src/cdr_schemas/docs/: schemas.md.j2
src/cdr_schemas/scripts/: format.sh  lint.sh  types.sh
src/cdr_schemas/tests/: test_area_extraction.py  test_georeference.py  test_line_extraction.py  test_metadata.py  test_point_extraction.py  test_polygon_extraction.py
tests/beak/: test_normalKLDiv.py
utilities/: conversions.py  eda.py  general.py  io.py  preparation.py  raster.py  utilities.py  vector.py
(+1226 files in other folders)
