[tool.poetry]
name = "beak"
version = "0.0.0"
description = "Integration of Beak algorithms for CriticalMAAS"
authors = ["Beak Consultants GmbH <postmaster@beak.de>"]
readme = "README.md"

packages = [
         {include = "beak", from = "src"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pip = ">24.0.0"
numpy = "1.26.2"
pandas = "2.1.0"
matplotlib = "3.7.2"
seaborn = "0.12.2"
scikit-learn = "1.3.0"
scipy = "1.11.2"
imbalanced-learn = "0.11.0"
rasterio = "1.3.8"
geopandas = ">=1.0.0"
fiona = ">=1.8.22,<2.0.0"
shapely = ">=2.0.2"
tqdm = ">=4.65.0"
pyarrow = "14.0.1"
tensorflow = "2.14.0"
tensorflow-probability = "0.22.1"
cdr_schemas = { git = "https://github.com/DARPA-CRITICALMAAS/cdr_schemas.git", tag = "v0.4.8" }
cdrc = ">=0.1.15"

[tool.poetry.group.ide.dependencies]
notebook = ">=7.0.0"
ipykernel = ">=6.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
sphinx = ">=8.0.0"
sphinx-rtd-theme = ">=3.0.0"
myst_parser = ">=4.0.0"
autoflake = ">=2.2.1"
pip-licenses = ">=4.3.0"

[tool.poetry.extras]
dev = ["sphinx", "sphinx-rtd-theme", "myst_parser", "autoflake", "pip-licenses"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
